Fix minor spacing

--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ footer {
 
 #flip {
     height:3.5rem;
+    margin-bottom: 8px;
     overflow:hidden;
     position: relative;
     right: 96px;
